fixed txt alignment

--- a/app/app.css
+++ b/app/app.css
@@ -88,7 +88,6 @@ body {
     display: block;
     padding-top: 2%;
     padding-left: 3%;
-    text-align: center;
     background-color: #EEEEEE;
     border-right: 1px solid #eee;
     min-height: 600px;
